# rotors_simulator

./: .gitignore  README.md  rotors_demos.rosinstall  rotors_hil.rosinstall  rotors_minimal.rosinstall
rotors_control/src/nodes/: lee_position_controller_node.cpp  roll_pitch_yawrate_thrust_controller_node.cpp
rotors_description/urdf/: component_snippets.xacro  component_snippets.xacro.bkp  lidar_base.xacro  mav_with_lidar.gazebo  multirotor_base.xacro
rotors_gazebo/: CMakeLists.txt  package.xml
rotors_gazebo/launch/: lidar.launch  mav_PRYT.launch  mav_hover_2.launch  mav_hovering_example.launch  mav_hovering_example_with_lidar.launch  smart_drone.launch  spawn_hb.launch  spawn_hb_4.launch  spawn_hb_4_stay.launch  spawn_hb_9.launch  spawn_hb_9_stay.launch  spawn_lidar.launch
rotors_gazebo/worlds/: 3wp.world  4_target.world  9_target.world  basic.world  with_gates.world  with_gates_bkp.world
rotors_gazebo_plugins/src/: gazebo_motor_model.cpp
