<package format="2">
  <name>rotors_gazebo</name>
  <version>2.2.3</version>
  <description>The rotors_gazebo package</description>

  <maintainer email="fadri.furrer@mavt.ethz.ch">Fadri Furrer</maintainer>
  <maintainer email="mina.kamel@mavt.ethz.ch">Mina Kamel</maintainer>

  <author>Fadri Furrer</author>
  <author>Michael Burri</author>
  <author>Mina Kamel</author>
  <author>Janosch Nikolic</author>
  <author>Markus Achtelik</author>

  <license>ASL 2.0</license>

  <url type="website">https://github.com/ethz-asl/rotors_simulator</url>
  <url type="bugtracker">https://github.com/ethz-asl/rotors_simulator/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rotors_gazebo_plugins</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>mav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rotors_gazebo_plugins</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>

  <exec_depend>message_runtime</exec_depend>

</package>
